test/fixtures/web-platform-tests/resources/webidl2/test/invalid/idl/sequenceAsAttribute.widl
interface sequenceAsAttribute {
  attribute sequence<short> invalid;
};